# SplitPay

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  railway.json
.github/workflows/: ci.yml
bot/: __main__.py  app.py  callback_data.py  config.py  enums.py  keyboards.py  middlewares.py  states.py  upload.py
bot/db/: engine.py  models.py  repositories.py
bot/routers/: __init__.py  callbacks.py  inline.py  private.py
bot/services/: card_renderer.py  expense_service.py  payment.py  sbp.py
docs/plans/: 2026-03-07-implementation.md  2026-03-07-tgpay-design.md  2026-03-08-implementation.md  2026-03-08-splitpay-design.md  PLAN.json  PROMPTS.md
scripts/: generate_demo.py  generate_og.py
tests/: conftest.py  test_callbacks.py  test_card_renderer.py  test_expense_service.py  test_inline.py  test_models.py  test_payment_service.py  test_repositories.py  test_sbp.py
