[project]
name = "splitpay"
version = "0.1.0"
description = "Inline Telegram-бот для разделения расходов между друзьями"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.15,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.0,<3",
    "pillow>=10.0,<11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
